# Biodiversity-credit-exchange

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  plan.md
.github/workflows/: ci.yml
contracts/approval-gov/: Cargo.toml
contracts/approval-gov/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/approval-gov/test_snapshots/test/: test_close_proposal_after_deadline_approved.1.json  (+19 more)
contracts/bdc-token/: Cargo.toml
contracts/bdc-token/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: errors.rs  lib.rs  order_book.rs  storage.rs  test.rs  types.rs
contracts/mrv-oracle/: Cargo.toml
contracts/mrv-oracle/src/: errors.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/retirement/: Cargo.toml
contracts/retirement/src/: errors.rs  geometry.rs  lib.rs  merkle.rs  storage.rs  test.rs  types.rs
docs/: architecture.md  methodology.md  oracle-spec.md  polygon-spec.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  PolygonMap.tsx
frontend/src/hooks/: usePolygons.ts  useSoroban.ts
frontend/src/pages/: DashboardPage.tsx  MarketplacePage.tsx  PortfolioPage.tsx
scripts/: deploy.sh  setup.sh  test.sh
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/test_snapshots/test/: test_community_veto_rejects_proposal.1.json  test_double_retire_rejected.1.json  test_full_lifecycle.1.json  test_unauthorized_mint_rejected.1.json
(+59 files in other folders)
